Bug 153647 - [B3] JetStream/quicksort.c fails/hangs on Linux with GCC
Summary: [B3] JetStream/quicksort.c fails/hangs on Linux with GCC
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords:
: 153644 (view as bug list)
Depends on:
Blocks: 152248 153478
  Show dependency treegraph
 
Reported: 2016-01-29 04:33 PST by Csaba Osztrogonác
Modified: 2016-02-02 23:10 PST (History)
11 users (show)

See Also:


Attachments
Patch (6.86 KB, patch)
2016-01-30 12:50 PST, Yusuke Suzuki
fpizlo: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2016-01-29 04:33:31 PST
With enabled B3-FTL, JetStream hangs during running quicksort.c benchmark.
Once I got "error" message instead of number, but almost always it stucks
in an infinite loop with 100% CPU load. No problem with LLVM-FTL.
Comment 1 Csaba Osztrogonác 2016-01-29 05:11:03 PST
It seems it is one more GCC/Clang related issue. 
quicksort.c test fails with GCC, but no problem with Clang.
Comment 2 Michael Catanzaro 2016-01-29 06:48:44 PST
Oh "good," so it will seem fine for developers but be broken for all our users.
Comment 3 Yusuke Suzuki 2016-01-30 10:28:56 PST
With GCC 4.9 debug build, it does not occur.
I guess there are some issue about C++ ill-formed code.
Comment 4 Yusuke Suzuki 2016-01-30 11:22:22 PST
Ah, ok, I've found the issue. I'll create the patch for that.
Comment 5 Yusuke Suzuki 2016-01-30 12:25:04 PST
I'm now creating the patch. But seeing the result, this issue may fix script-tests/array-enumerators-functions.js at the same time.
If it is fixed, Linux x64 GTK B3 works completely :D
Comment 6 Yusuke Suzuki 2016-01-30 12:50:14 PST
Created attachment 270314 [details]
Patch
Comment 7 WebKit Commit Bot 2016-01-30 12:51:44 PST
Attachment 270314 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:107:  One space before end of line comments  [whitespace/comments] [5]
ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:109:  One space before end of line comments  [whitespace/comments] [5]
ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:111:  One space before end of line comments  [whitespace/comments] [5]
ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:117:  Multi line control clauses should use braces.  [whitespace/braces] [4]
ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:117:  One space before end of line comments  [whitespace/comments] [5]
ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:123:  Multi line control clauses should use braces.  [whitespace/braces] [4]
ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:123:  One space before end of line comments  [whitespace/comments] [5]
ERROR: Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h:128:  Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons.  [readability/comparison_to_zero] [5]
Total errors found: 8 in 3 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 8 Yusuke Suzuki 2016-01-30 12:57:19 PST
Committed r195906: <http://trac.webkit.org/changeset/195906>
Comment 9 Carlos Garcia Campos 2016-02-02 23:10:20 PST
*** Bug 153644 has been marked as a duplicate of this bug. ***