Source/JavaScriptCore/b3/B3ComputeDivisionMagic.h
@@ -89,64 +89,46 @@ struct DivisionMagic {
 template<typename T>
 DivisionMagic<T> computeDivisionMagic(T divisor)
 {
-    T d = divisor;
+    typedef typename std::make_unsigned<T>::type UnsignedT;
+    UnsignedT d = divisor;
     unsigned p;
-    T ad, anc, delta, q1, r1, q2, r2, t;
-    T signedMin = std::numeric_limits<T>::min();
+    UnsignedT ad, anc, delta, q1, r1, q2, r2, t;
+    UnsignedT signedMin = static_cast<UnsignedT>(std::numeric_limits<T>::min());
     DivisionMagic<T> mag;
     unsigned bitWidth = sizeof(divisor) * 8;
 
     // This code doesn't like to think of signedness as a type. Instead it likes to think that
     // operations have signedness. This is how we generally do it in B3 as well. For this reason,
-    // this provides helpers for unsigned operations on the signed type (T).
-    
-    auto zshr = [&] (T value, int amount) -> T {
-        return static_cast<typename std::make_unsigned<T>::type>(value) >> amount;
-    };
+    // we cast all the operated values once to unsigned. And later, we convert it to signed.
+    // Only `divisor` have signedness here.
 
-    auto udiv = [&] (T left, T right) -> T {
-        return static_cast<T>(static_cast<typename std::make_unsigned<T>::type>(left) / static_cast<typename std::make_unsigned<T>::type>(right));
-    };
-
-    auto urem = [&] (T left, T right) -> T {
-        return static_cast<T>(static_cast<typename std::make_unsigned<T>::type>(left) % static_cast<typename std::make_unsigned<T>::type>(right));
-    };
-
-    auto aboveEqual = [&] (T left, T right) -> bool {
-        return static_cast<typename std::make_unsigned<T>::type>(left) >= static_cast<typename std::make_unsigned<T>::type>(right);
-    };
-
-    auto below = [&] (T left, T right) -> bool {
-        return static_cast<typename std::make_unsigned<T>::type>(left) < static_cast<typename std::make_unsigned<T>::type>(right);
-    };
-
-    ad = d < 0 ? -d : d;
-    t = signedMin + zshr(d, bitWidth - 1);
-    anc = t - 1 - urem(t, ad);   // absolute value of nc
+    ad = divisor < 0 ? -divisor : divisor; // -(signed min value) < signed max value. So there is no loss.
+    t = signedMin + (d >> (bitWidth - 1));
+    anc = t - 1 - (t % ad);   // absolute value of nc
     p = bitWidth - 1;    // initialize p
-    q1 = udiv(signedMin, anc);   // initialize q1 = 2p/abs(nc)
+    q1 = signedMin / anc;   // initialize q1 = 2p/abs(nc)
     r1 = signedMin - q1*anc;    // initialize r1 = rem(2p,abs(nc))
-    q2 = udiv(signedMin, ad);    // initialize q2 = 2p/abs(d)
+    q2 = signedMin / ad;    // initialize q2 = 2p/abs(d)
     r2 = signedMin - q2*ad;     // initialize r2 = rem(2p,abs(d))
     do {
         p = p + 1;
         q1 = q1 << 1;          // update q1 = 2p/abs(nc)
         r1 = r1 << 1;          // update r1 = rem(2p/abs(nc))
-        if (aboveEqual(r1, anc)) {  // must be unsigned comparison
+        if (r1 >= anc) {  // must be unsigned comparison
             q1 = q1 + 1;
             r1 = r1 - anc;
         }
         q2 = q2 << 1;          // update q2 = 2p/abs(d)
         r2 = r2 << 1;          // update r2 = rem(2p/abs(d))
-        if (aboveEqual(r2,ad)) {   // must be unsigned comparison
+        if (r2 >= ad) {   // must be unsigned comparison
             q2 = q2 + 1;
             r2 = r2 - ad;
         }
         delta = ad - r2;
-    } while (below(q1, delta) || (q1 == delta && r1 == 0));
+    } while (q1 < delta || (q1 == delta && r1 == 0));
 
     mag.magicMultiplier = q2 + 1;
-    if (d < 0)
+    if (divisor < 0)
         mag.magicMultiplier = -mag.magicMultiplier;   // resulting magic number
     mag.shift = p - bitWidth;          // resulting shift
 
